--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,9 @@
   <div id="notifyUser"></div>
 
    <form id="chatform" onsubmit="return(false)">
-    <input type="hidden" id="user" value="" />
-    <input id="m" autocomplete="off" placeholder="Type your message here.." /><input
+   <input type="hidden" id="user" value="" />
+    <input type="email" id="m"autocomplete="off" placeholder="Type your UserEmail Id here.."  value="" />
+    <br><input
       type="submit" id="button" value="Send" />
   </form>
 
